# InventoringApp

./: README.md  pyproject.toml
src/: App.py
src/ui/: AppWindow.py  WindowManager.py
src/ui/components/: NavigationMenu.py
src/ui/configuration/: AppConfiguration.py  Constants.py
src/ui/utils/: WidgetSizeManager.py
src/ui/utils/model/: Model.py
