[tool.poetry]
name = "inventorying-app"
version = "0.1.0"
description = ""
authors = ["Antonio Busuladzich <antonio.busuladzich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
PySide6 = "6.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"